--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: gcr.io/jessup-spinnaker-test/gifcreator:d29d90c2-8001-40aa-b665-e489c2d67c74
+        image: gcr.io/gifinator-195109/gifinator:latest
         command: ["/frontend"]
         env:
         - name: FRONTEND_PORT
@@ -39,6 +39,6 @@ spec:
         - name: GIFCREATOR_NAME
           value: "gifcreator"
         - name: GOOGLE_PROJECT_ID
-          value: "jessup-spinnaker-test" # TODO(jessup) Ideally this is dynamic
+          value: "gifinator-195109" # TODO(jessup) Ideally this is dynamic
         ports:
         - containerPort: 8080 # TODO(jessup) figure out how to use this in config
