--- a/k8s/gifcreator-deployment.yaml
+++ b/k8s/gifcreator-deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: gifcreator-server
-        image: gcr.io/jessup-spinnaker-test/gifcreator:d29d90c2-8001-40aa-b665-e489c2d67c74 # TODO(jessup) Ideally this is dynamic
+        image: gcr.io/gifinator-195109/gifinator:latest # TODO(jessup) Ideally this is dynamic
         command: ["/gifcreator"]
         env:
         - name: GIFCREATOR_PORT
@@ -39,9 +39,9 @@ spec:
         - name: REDIS_NAME
           value: "redis-master"
         - name: GOOGLE_PROJECT_ID
-          value: "jessup-spinnaker-test" # TODO(jessup) Ideally this is dynamic
+          value: "gifinator-195109" # TODO(jessup) Ideally this is dynamic
         - name: GCS_BUCKET_NAME
-          value: "jessup-spinnaker-test-k8srenderdemo" # Configure this
+          value: "gifinator" # Configure this
         ports:
         - containerPort: 11080 # TODO(jessup) figure out how to use this in config
 ---
@@ -50,7 +50,7 @@ kind: Deployment
 metadata:
   name: gifcreator-worker-deployment
 spec:
-  replicas: 20 # tells deployment to run 2 pods matching the template
+  replicas: 8 # tells deployment to run 2 pods matching the template
   template: # create pods using pod definition in this template
     metadata:
       # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
@@ -60,7 +60,7 @@ spec:
     spec:
       containers:
       - name: gifcreator-worker
-        image: gcr.io/jessup-spinnaker-test/gifcreator:d29d90c2-8001-40aa-b665-e489c2d67c74 # TODO(jessup) Ideally this is dynamic
+        image: gcr.io/gifinator-195109/gifinator:latest # TODO(jessup) Ideally this is dynamic
         command: ["/gifcreator", "-worker"]
         env:
         - name: GIFCREATOR_PORT
@@ -74,8 +74,8 @@ spec:
         - name: RENDER_PORT
           value: "12080"
         - name: GOOGLE_PROJECT_ID
-          value: "jessup-spinnaker-test" # TODO(jessup) Ideally this is dynamic
+          value: "gifinator-195109" # TODO(jessup) Ideally this is dynamic
         - name: GCS_BUCKET_NAME
-          value: "jessup-spinnaker-test-k8srenderdemo" # Configure this
+          value: "gifinator" # Configure this
         ports:
         - containerPort: 11080 # TODO(jessup) figure out how to use this in config
