--- a/k8s/render-deployment.yaml
+++ b/k8s/render-deployment.yaml
@@ -19,7 +19,7 @@ kind: Deployment
 metadata:
   name: render-deployment
 spec:
-  replicas: 20 # tells deployment to run 2 pods matching the template
+  replicas: 8 # tells deployment to run 2 pods matching the template
   template: # create pods using pod definition in this template
     metadata:
       labels:
@@ -27,14 +27,14 @@ spec:
     spec:
       containers:
       - name: render
-        image: gcr.io/jessup-spinnaker-test/gifcreator:d29d90c2-8001-40aa-b665-e489c2d67c74 # TODO(jessup) Ideally this is dynamic
+        image: gcr.io/gifinator-195109/gifinator:latest # TODO(jessup) Ideally this is dynamic
         command: ["/render"]
         env:
         - name: RENDER_PORT
           value: "12080"
         - name: GOOGLE_PROJECT_ID
-          value: "jessup-spinnaker-test" # TODO(jessup) Ideally this is dynamic
+          value: "gifinator-195109" # TODO(jessup) Ideally this is dynamic
         - name: GCS_BUCKET_NAME
-          value: "jessup-spinnaker-test-k8srenderdemo"
+          value: "gifinator"
         ports:
         - containerPort: 12080 # TODO(jessup) figure out how to use this in config
